[tool.poetry]
name = "test_po"
version = "1.1.1-alpha.0"
description = ""
authors = ["DanilaKorobkov <k.danila67@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pytest-qt = "^3.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
